Create mypolls url and view

--- a/polls/templates/polls/list.html
+++ b/polls/templates/polls/list.html
@@ -1,6 +1,8 @@
 {% extends 'polls/base.html' %}
 {% block content %}
 {% for poll in polls %}
-<li><a href='{% url "detail" pk=poll.pk %}'>{{ poll.question }}</a></li>
+<li><a href='{% url "detail" pk=poll.pk %}'>{{ poll.question }}</a>
+
+</li>
 {% endfor %}
 {% endblock %}
