--- a/polls/templates/polls/create.html
+++ b/polls/templates/polls/create.html
@@ -1,7 +1,7 @@
 {% extends 'polls/base.html' %}
 {% load staticfiles %}
 {% block js %}
-<script type='text/javascript'src='{% static "js/jquery.js" %}' ></script>
+<script type='text/javascript' src='{% static "js/jquery.js" %}' ></script>
 <script type='text/javascript' src="{% static 'js/js.js'%}"></script>
 {%endblock%}
 {% block content %}
@@ -16,7 +16,7 @@
 <div id="empty_form" style="display:none;">
     {{ choices.empty_form.as_p }}
 </div>
-<div id="add_form">Add another form</div>
+<div id="add_form">Add</div>
 <button type='submit'>Create</button>
 </form>
 </section>
