Implemented charts, renamed js.js to create.js and change some redirects to detail function directly

--- a/polls/templates/polls/create.html
+++ b/polls/templates/polls/create.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% block js %}
 <script type='text/javascript' src='{% static "js/jquery.js" %}' ></script>
-<script type='text/javascript' src="{% static 'js/js.js'%}"></script>
+<script type='text/javascript' src="{% static 'js/create.js'%}"></script>
 {%endblock%}
 {% block content %}
 <section>
