--- a/polls/templates/polls/base.html
+++ b/polls/templates/polls/base.html
@@ -16,6 +16,7 @@
 <div id='logout'>Hello, {{user.username}}<a href='{% url "logout" %}?next=/'>(Logout)</a></div>
 {% else %}
 <div id='login'><a href='{% url "login" %}'>Login</a></div>
+<div id='register'><a href='{% url "register" %}'>Register</a></div>
 {% endif %}
 </header>
 {% block content %}
