--- a/polls/templates/polls/base.html
+++ b/polls/templates/polls/base.html
@@ -13,7 +13,7 @@
 {% if user.is_authenticated %}
 <div id='create'><a href='{% url "create" %}'>Create</a></div>
 <div id='mypolls'><a href='{% url "mypolls" %}'>My Polls</a></div>
-<div id='logout'>Hello, {{user.username}}<a href='{% url "logout" %}?next=/'>(Logout)</a></div>
+<div id='logout'>Hello, {{user.username}}<a href='{% url "logout" %}'>(Logout)</a></div>
 {% else %}
 <div id='login'><a href='{% url "login" %}'>Login</a></div>
 <div id='register'><a href='{% url "register" %}'>Register</a></div>
