--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,7 +1,7 @@
 {% extends 'polls/base.html' %}
 
 {% block content %}
-<header>{{ poll.question }} by {{user}}</header>
+<header>{{ poll.question }} by {{poll.author}}</header>
 <section>
 {%if error_message%}
 <p><strong>{{error_message}}</strong></p>
