--- a/polls/templates/polls/base.html
+++ b/polls/templates/polls/base.html
@@ -1,24 +1,32 @@
+{% load staticfiles %}
+
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Vote</title>
-
+	 <link rel="stylesheet" href="{%static 'css/styles.css'%}">
  </head>
 <body>
-<header>
-<div id='title'>Votegram</div>
-<div id='list'><a href='{% url "list" %}'>Polls</a></div>
+<ul>
+<li id='title'><a href="{% url 'home' %}">Votegram</a></li>
+<li id='list'><a href='{% url "list" %}'>Polls</a></li>
 
 {% if user.is_authenticated %}
-<div id='create'><a href='{% url "create" %}'>Create</a></div>
-<div id='mypolls'><a href='{% url "mypolls" %}'>My Polls</a></div>
-<div id='logout'>Hello, {{user.username}}<a href='{% url "logout" %}'>(Logout)</a></div>
+<li id='create'><a href='{% url "create" %}'>Create</a></li>
+<li id='mypolls'><a href='{% url "mypolls" %}'>My Polls</a></li>
+<li id='logout'><a href='#'>Hello, {{user.username}}</a>
+	<ul>
+		<li>
+		<a href='{% url "logout" %}'>(Logout)</a>
+		</li>
+	</ul>
+</li>
 {% else %}
-<div id='login'><a href='{% url "login" %}'>Login</a></div>
-<div id='register'><a href='{% url "register" %}'>Register</a></div>
+<li id='login'><a href='{% url "login" %}'>Login</a></li>
+<li id='register'><a href='{% url "register" %}'>Register</a></li>
 {% endif %}
-</header>
+</ul>
 {% block content %}
 {% endblock %}
 {% block js %}
