Changed ul to #nav

--- a/polls/static/css/styles.css
+++ b/polls/static/css/styles.css
@@ -1,21 +1,21 @@
 body{
 	margin:0
 }
-ul{
+#nav,#nav ul{
 	text-align:right;
 	background-color:gainsboro;
 	list-style-type:none;
 	margin:0;
 	padding:0;
 }
-ul>li{
+#nav>li{
 	display:inline;
 	position:relative
 }
-ul>li:first-child{
+#nav>li:first-child{
 	float:left;
 }
-ul>li>a{
+#nav>li>a, #nav ul>li>a{
 	padding:1em;
 	display:inline-block;
 	text-decoration:none;
@@ -24,22 +24,22 @@ ul>li>a{
 	text-align:center
 	
 }
-ul>li>a:hover{
+#nav>li>a:hover{
 	background-color:white;
 }
 
-ul>li:last-child>ul{
+#nav>li:last-child>ul{
 	display:none;
 	text-align:left
 }
-ul>li:last-child:hover ul{
+#nav>li:last-child:hover ul{
 	display:block;
 	position:absolute;
 	left:0;
 }
-ul>li:last-child>ul>li>a{
+#nav>li:last-child>ul>li>a{
 	width:100%;
 }
-ul>li:last-child>ul>li>a:hover{
+#nav>li:last-child>ul>li>a:hover{
 		background-color:grey;
 }
