--- a/polls/templates/polls/base.html
+++ b/polls/templates/polls/base.html
@@ -6,16 +6,17 @@
   <meta charset="utf-8">
   <title>Vote</title>
 	 <link rel="stylesheet" href="{%static 'css/styles.css'%}">
+	 
  </head>
 <body>
 <ul id='nav'>
 	<li><a href="{% url 'home' %}">Votegram</a></li>
-	<li id='list'><a href='{% url "list" %}'>Polls</a></li>
+	<li><a href='{% url "list" %}'>Polls</a></li>
 
 	{% if user.is_authenticated %}
 	<li><a href='{% url "create" %}'>Create</a></li>
 	<li><a href='{% url "mypolls" %}'>My Polls</a></li>
-	<li><a href='#'>Hello, {{user.username}}</a>
+	<li><a href='#'>{{user.username}}</a>
 		<ul>
 			<li>
 			<a href='{% url "logout" %}'>Logout</a>
@@ -23,8 +24,8 @@
 		</ul>
 	</li>
 	{% else %}
-	<li id='login'><a href='{% url "login" %}'>Login</a></li>
-	<li id='register'><a href='{% url "register" %}'>Register</a></li>
+	<li><a href='{% url "login" %}'>Login</a></li>
+	<li><a href='{% url "register" %}'>Register</a></li>
 	{% endif %}
 </ul>
 {% block content %}
