--- a/polls/templates/polls/create.html
+++ b/polls/templates/polls/create.html
@@ -6,7 +6,7 @@
 {%endblock%}
 {% block content %}
 <div id='container'>
-<h1>Create new poll</h1>
+<h1>{{title}}</h1>
 {{form.non_field_errors}}
 
 <form id='forms' method='POST'>
@@ -33,7 +33,7 @@
 <div class='choice new'>{{ choices.empty_form }}</div>
 </div>
 <div id="add_form">+ Add other option</div>
-<button type='submit'>Create</button>
+<button type='submit'>{{button}}</button>
 </form>
 </div>
 
