--- a/polls/static/css/styles.css
+++ b/polls/static/css/styles.css
@@ -1,5 +1,6 @@
 body{
-	margin:0
+	margin:0;
+	font-family: "Segoe UI",'Calibri';
 }
 /******* Nav Bar ******/
 #nav,#nav ul{
@@ -161,7 +162,8 @@ html body .list .nopos{
 
 button[type=submit]{
 	height:3em;
-	width:9em;
+	padding: 0.8em 2.5em;
+	padding: 0.8em 2.5em;
 	background-color:orange;
 	color:white;
 	border:0px;
