--- a/polls/templates/polls/create.html
+++ b/polls/templates/polls/create.html
@@ -28,6 +28,7 @@
 
 {{choiceform.choice.label_tag}}
 <div class='choice'>{{choiceform.choice}}</div>
+{{choiceform.id}}
 {% endfor %}
 <div id="empty_form" style="display:none;">
 <div class='choice'>{{ choices.empty_form }}</div>
