--- a/polls/templates/polls/base.html
+++ b/polls/templates/polls/base.html
@@ -11,7 +11,7 @@
  </head>
 <body>
 <ul id='nav'>
-	<li><a href="{% url 'home' %}">Votegram</a></li>
+	<li><a href="{% url 'home' %}">VotePlex</a></li>
 	<li><a href='{% url "list" %}'>Polls</a></li>
 
 	{% if user.is_authenticated %}
