--- a/polls/templates/polls/home.html
+++ b/polls/templates/polls/home.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div id='home-container'>
 <div id='banner'>
-<div> Votegram</div>
+<div>VotePlex</div>
 <p>Create polls easily</p>
 </div>
 <div id='features'>
