--- a/polls/static/css/styles.css
+++ b/polls/static/css/styles.css
@@ -172,7 +172,7 @@ html body .list .nopos{
 	padding-bottom:1em
 }
 #forms input:not([type=radio]){
-	width:95%;
+	width:14em;
 	padding:0.5em;
 	font-size:1em;
 	border:1px solid black;
@@ -225,9 +225,11 @@ button[type=submit]:hover{
 
 /****** Home ******/
 #home-container,#detail-container {
-	margin:3em auto 0;
+	margin:10vh auto 0;
 }
-
+#banner{
+	display:inline-block;
+}
 #banner>div{
 	font-size:4em;
 	color:orange;
@@ -242,7 +244,15 @@ button[type=submit]:hover{
 	font-size:2em;
 	display: inline-block;
 }
-#banner,span{
+
+#detail-container #features{
+	margin:1em 0 2em;
+}
+#home-container #banner{
+	position:relative;
+	margin-top:4em;
+}
+span{
 	display: inline-block;
 	position: relative;
 	top: 50%;
@@ -277,11 +287,11 @@ img{
 		width:90%;
 		height:auto;
 	}
-	#banner,#features span{
+	#home-container #banner,#features span{
 		transform: translate(-50%);
 		left: 50%;
-		top:auto;
 		margin-bottom:2em;
+		text-align:center;
 	}
 	#features{
 	float:none;
@@ -294,16 +304,12 @@ img{
 		font-size:0.8em
 	}
 	#features img{
-		display:block
-	}
-	#features img{
+		display:block;
 		position:relative;
 		left:50%;
 		transform:translate(-50%)
 	}
-	#features span{
-		text-align:center;
-	}
+
 	#list-container{
 	width:95%;
 	}
@@ -314,7 +320,7 @@ img{
 @media screen and (min-width:770px){
 	#detail-container,#home-container{
 		width:80%;
-		height: 17em;
+
 	}
 	#detail-container>div{
 		width:48%
