--- a/polls/static/css/styles.css
+++ b/polls/static/css/styles.css
@@ -172,10 +172,11 @@ html body .list .nopos{
 	padding-bottom:1em
 }
 #forms input:not([type=radio]){
-	width:14em;
+	width:100%;
 	padding:0.5em;
 	font-size:1em;
 	border:1px solid black;
+	box-sizing:border-box;
 }
 
 #forms label:not([for=id_pollf-question]){
