Fixed styling of author name Fixed footer tag in base template Load jQuery from CDN

--- a/polls/static/css/styles.css
+++ b/polls/static/css/styles.css
@@ -231,6 +231,11 @@ button[type=submit]:hover{
 #banner{
 	display:inline-block;
 }
+#banner h2 div{
+	font-weight: 400;
+	color: #777;
+	font-size: 0.65em
+}
 #banner>div{
 	font-size:4em;
 	color:orange;
