--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -35,7 +35,7 @@
 choices=JSON.parse('{{choices|safe}}');
 votes=JSON.parse('{{votes}}');
 </script>
-<script src='{% static "js/chart.min.js" %}'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js'></script>
 <script src='{% static "js/detail.js" %}'></script>
 
 {% endblock %}
