--- a/polls/templates/polls/base.html
+++ b/polls/templates/polls/base.html
@@ -31,7 +31,12 @@
 </ul>
 {% block content %}
 {% endblock %}
-<div id='footer'>By Harshit Jain<br>GitHub Repositry: <a href='https://github.com/harshit-j/VotePlex-Django-Project'>VotePlex Django Project</a></div>
+<div id='footer'>Fork it on 
+<a target="_blank" href="https://github.com/harshit-j/VotePlex-Django-Project" class="icon">
+<img src="{%static 'img/github.svg'%}">
+</a>
+
+</div>
 {% block js %}
 {% endblock %}
 </body>
